--- a/src/app/components/dashboard/main/livros/livros.component.html
+++ b/src/app/components/dashboard/main/livros/livros.component.html
@@ -23,7 +23,7 @@
                 <td>
                     <div class="book-info">
                         <div class="container-img">
-                            <img [src]="`/livros/${livro.imagem}.png`" alt="">
+                            <img [src]="livro.imagem" alt="">
                         </div>
                         <div>
                             <p>{{ livro.titulo }}</p>
