--- a/src/app/components/dashboard/main/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/main/usuarios/usuarios.component.html
@@ -5,29 +5,32 @@
             <tr>
                 <th>Nome</th>
                 <th>Email</th>
-                <th>Endereço</th>
                 <th>Número</th>
                 <th>Total gasto</th>
+                <th>Role</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>
-                    <p>Bruno</p>
-                </td>
-                <td>
-                    <p>bruno&#64;email.com</p>
-                </td>
-                <td>
-                    <button [routerLink]="['/dashboard/usuarios/endereco']" class="address-button">...</button>
-                </td>
-                <td>
-                    <p>(99) 9999-9999</p>
-                </td>
-                <td>
-                    <p>R$ 499,90</p>
-                </td>
-            </tr>
+            @for (usuario of usuarios; track $index) {
+                <tr>
+                    <td>
+                        <p>{{ usuario.nome }}</p>
+                    </td>
+                    <td>
+                        <p>{{ usuario.email }}</p>
+                    </td>
+                    <td>
+                        <p>{{ usuario.telefone }}</p>
+                    </td>
+                    <td>
+                        <p>R$ 499,90</p>
+                    </td>
+                    <td>
+                        <p>{{usuario.role}}</p>
+                    </td>
+                </tr>
+            }
+
         </tbody>
     </table>
 </app-main>
