--- a/src/app/components/layout/pages/lista-livros/lista-livros.component.css
+++ b/src/app/components/layout/pages/lista-livros/lista-livros.component.css
@@ -1,13 +1,39 @@
+.lista-livros-header {
+    margin-top: 2em;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.lista-livros-header p {
+    text-transform: uppercase;
+    font-size: 12px;
+    padding-bottom: .8em;
+}
+
+.lista-livros-header span {
+    display: block;
+    width: 24px;
+    margin: 1em auto;
+    height: 3px;
+    background-color: var(--destaque);
+}
+
 .home-books-wrapper {
-    margin-top: 8em;
+    margin: 2em auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 1200px;
+    gap: 2em;
+    background-color: var(--fundo-componentes);
+    border-radius: 8px;
+    padding: 1em 2em;
 }
 
 .home-books-header {
-    text-align: center;
-    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    font-size: 22px;
 }
 
 .home-books-header p {
@@ -16,33 +42,38 @@
     padding-bottom: .8em;
 }
 
-.home-books-header span {
-    display: block;
-    width: 24px;
-    margin: 1em auto;
-    height: 3px;
-    background-color: var(--destaque);
+.filter {
+    background-color: var(--fundo-secundario);
+    border: none;
+    padding: .9em;
+    font-family: var(--work-sans);
+    color: var(--texto);
+    font-size: 16px;
+    border-radius: 8px;
+    appearance: none;
 }
 
 .cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 3em;
+    gap: 1.2em;
 }
 
 .book-card {
     display: flex;
     flex-direction: column;
-    background-color: var(--fundo-componentes);
-    width: 180px;
-    height: 330px;
+    background-color: var(--fundo-secundario);
+    width: 190px;
+    height: 350px;
     border-radius: 8px;
-    padding: 1em;
+    padding: .5em 1em 1em 1em;
+    gap: .3em;
+    margin-bottom: 1.5em;
 }
 
 .book-img {
-    width: 128px;
-    height: 195px;
+    width: 118px;
+    height: 165px;
     margin: auto;
 }
 
@@ -54,6 +85,9 @@
 .book-header {
     padding-bottom: 1em;
     font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    gap: .2em;
 }
 
 .book-header p {
@@ -63,19 +97,42 @@
 
 .price-info {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    gap: .5em;
 }
 
 .preco {
     font-weight: bold;
 }
 
+.see-more {
+    text-decoration: none;
+    color: var(--work-sans);
+    background-color: var(--destaque);
+    padding: .5em;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .price-info button {
     background-color: var(--destaque);
     border: none;
-    padding-top: .3em;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    /* padding-top: .3em; */
+    padding: .5em;
+    border-radius: 8px;
+    /* width: 40px;
+    height: 40px; */
+}
+
+.mySwiper {
+    width: 100%; /* Ou uma largura fixa maior, se necessário */
+    height: 450px; /* Exemplo: defina uma altura, pois o Swiper precisa dela */
+    /* Certifique-se de que o elemento pai do .cards também permite a largura total */
 }
