--- a/src/app/components/layout/pages/minha-conta/minha-conta.component.css
+++ b/src/app/components/layout/pages/minha-conta/minha-conta.component.css
@@ -1,82 +1,33 @@
 .minha-conta-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    justify-content: space-between;
-    width: 600px;
+    gap: 1.5em;
+    width: 800px;
     margin: 2em auto;
 }
 
-.minha-conta-header {
-    display: flex;
-    align-items: ce;
-    justify-content: space-between;
-}
-
-.minha-conta-header button {
-    font-family: var(--work-sans);
-    padding: 0 3em;
-    background-color: var(--destaque);
-    color: var(--texto);
-    border: none;
-    border-radius: 8px;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2em;
-    width: 100%;
-}
-
-label {
-    display: flex;
-    flex-direction: column;
-    gap: .5em;
-    width: 100%;
-}
-
-input {
-    font-size: 16px;
-    background-color: var(--fundo-secundario);
-    color: var(--sub-texto);
-    padding: 1em;
-    border-radius: 8px;
-    border: 1px solid var(--cor-borda);
-}
-
-input::placeholder {
-    font-size: 16px;
-    font-family: var(--work-sans);
-}
-
-input:focus {
-    outline: none;
-}
-
-input:disabled {
-    opacity: 0.7;
-    cursor: not-allowed;
-}
-
-input:enabled {
-  background-color: #ffffff; 
-  color: #333333; 
-  opacity: 1; 
-  cursor: text; 
-}
-
-.input-wrapper {
+.minha-conta-cards {
     display: flex;
     gap: 1.5em;
 }
 
-.submit-button-wrapper button {
-    width: 100%;
-    padding: .8em 2em;
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: .8em;
+    width: 300px;
+    background-color: var(--fundo-componentes);
+    padding: 1em;
     border-radius: 8px;
-    border: none;
-    background-color: var(--destaque);
-    color: var(--texto);
-    font-size: 16px;
+    transition: transform 0.3s ease-out;
+    cursor: pointer;
+}
+
+.card p {
+    font-size: 14px;
+    color: var(--sub-texto);
+}
+
+.card:hover {
+    transform: translateY(-5px);
 }
