--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
         <ul>
             <li>
                 <a [routerLink]="['/dashboard/home']">
-                    <img src="/icones/dashboard/home.svg" alt="">
+                    <img src="/icones/dashboard/dashboard.svg" alt="">
                     DashBoard
                 </a>
             </li>
@@ -34,6 +34,12 @@
                 <a [routerLink]="['/dashboard/usuarios']">
                     <img src="/icones/dashboard/users.svg" alt="">
                     Usuários
+                </a>
+            </li>
+            <li>
+                <a [routerLink]="['/home/livros']">
+                    <img src="/icones/dashboard/home.svg" alt="">
+                    Home
                 </a>
             </li>
         </ul>
