--- a/src/app/components/layout/pages/cadastro/cadastro.component.html
+++ b/src/app/components/layout/pages/cadastro/cadastro.component.html
@@ -26,7 +26,7 @@
             </label>
             <label>
                 Confirmar senha
-                <input type="password" name="senha" placeholder="Confirme sua senha">
+                <input [(ngModel)]="formRegistro.confirmarSenha" type="password" name="senha" placeholder="Confirme sua senha">
             </label>
         </div>
         <button>Cadastrar</button>
