--- a/src/app/components/layout/pages/pagamento/pagamento.component.html
+++ b/src/app/components/layout/pages/pagamento/pagamento.component.html
@@ -74,7 +74,7 @@
             @for (item of carrinho.itens; track $index) {
             <div class="card">
                 <div class="container-image">
-                    <img [src]="`/livros/${item.livro.imagem}.png`" alt="">
+                    <img [src]="item.livro.imagem" alt="">
                 </div>
                 <div class="card-info">
                     <div>
